# gnupg-cks-daemon

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  command.c  command.h  common.c  common.h  scdaemon.c  sexp.c  sexp.h  utils.c  utils.h
